Insert gallerys, quit price of rooms,translate services,updated photos. Fix #18, #17, #16, #15, #12

--- a/hostal-campito.html
+++ b/hostal-campito.html
@@ -131,19 +131,14 @@
                     <div class="select_room clearfix">
 
                     <iframe src="http://embed.conilhospeda.com/embed/hostal-campito/" width="100%" height="500px" border=0></iframe>
-
-
                         <div class="facilities_top_para">
-                        <p data-i18n="hostal.description"></p>
-                    </div>
-
-
+                            <p data-i18n="hostal.description"></p>
+                        </div>
                         <div class="section_title nice_title text-center clearfix">
-                            <h3>El Hostal Campito</h3>
+                            <h3 data-i18n="welcome.welcome_camp"></h3>
                         </div>
 
-
-                                   <!-- start other detect room section -->
+        <!-- start room section -->
         <div class="other_room_area">
             <div class="container">
                 <div class="row">
@@ -188,7 +183,7 @@
                                                                         </div>
                                                                         <div class="item">
                                                                           <div class="single_item" style="">
-                                                                            <img src="img/hostal/solar01.jpg" alt="img">
+                                                                            <img src="img/hostal/rep01.jpg" alt="img">
                                                                           </div>
                                                                         </div>
                                                                         <div class="item">
@@ -198,7 +193,7 @@
                                                                         </div>
                                                                         <div class="item">
                                                                           <div class="single_item" style="">
-                                                                            <img src="img/hostal/solar02.jpg" alt="img">
+                                                                            <img src="img/hostal/salon00.jpg" alt="img">
                                                                           </div>
                                                                         </div>
                                                                         <div class="item">
@@ -440,27 +435,27 @@
                                                                       <div class="carousel-inner" role="listbox">
                                                                         <div class="item active">
                                                                           <div class="single_item" style="">
-                                                                            <img src="img/hostal/hostal00.jpg" alt="img">
+                                                                            <img src="img/rooms/confort01.jpg" alt="img">
                                                                           </div>
                                                                         </div>
                                                                         <div class="item">
                                                                           <div class="single_item" style="">
-                                                                            <img src="img/hostal/solar01.jpg" alt="img">
+                                                                            <img src="img/rooms/standard04.jpg" alt="img">
                                                                           </div>
                                                                         </div>
                                                                         <div class="item">
                                                                           <div class="single_item" style="">
-                                                                            <img src="img/hostal/solar02.jpg" alt="img">
+                                                                            <img src="img/rooms/single01.jpg" alt="img">
                                                                           </div>
                                                                         </div>
                                                                         <div class="item">
                                                                           <div class="single_item" style="">
-                                                                            <img src="img/hostal/solar03.jpg" alt="img">
+                                                                            <img src="img/rooms/standard03.jpg" alt="img">
                                                                           </div>
                                                                         </div>
                                                                         <div class="item">
                                                                           <div class="single_item" style="">
-                                                                            <img src="img/hostal/rep03.jpg" alt="img">
+                                                                            <img src="img/rooms/triple01.jpg" alt="img">
                                                                           </div>
                                                                         </div>
                                                                       </div>
@@ -483,9 +478,9 @@
                                                                     <div class="single_room_wrapper clearfix">
                                                                         <div class="room_wrapper">
                                                                             <div class="dif_room_media">
-                                                                                <a href="img/hostal/rep03.jpg" data-uk-lightbox="{group:'group1'}" title="Recepción" >
+                                                                                <a href="img/rooms/quadruple01.jpg" data-uk-lightbox="{group:'group1'}" title="Recepción" >
                                                                                 <figure class="uk-overlay uk-overlay-hover" class="img-responsive">
-                                                                                    <img alt="img" src="img/hostal/rep03.jpg" class="img-responsive" >
+                                                                                    <img alt="img" src="img/rooms/quadruple01.jpg" class="img-responsive" >
                                                                                     <div class="uk-overlay-panel uk-overlay-background uk-overlay-icon"></div>
                                                                                 </figure>
                                                                                 </a>
@@ -497,9 +492,9 @@
                                                                     <div class="single_room_wrapper clearfix">
                                                                         <div class="room_wrapper">
                                                                             <div class="dif_room_media">
-                                                                                <a href="img/hostal/vistas00.jpg" data-uk-lightbox="{group:'group1'}" title="Vistas">
+                                                                                <a href="img/rooms/superior01.jpg" data-uk-lightbox="{group:'group1'}" title="Vistas">
                                                                                 <figure class="uk-overlay uk-overlay-hover">
-                                                                                    <img alt="img" src="img/hostal/vistas00.jpg" >
+                                                                                    <img alt="img" src="img/rooms/superior01.jpg" >
                                                                                     <div class="uk-overlay-panel uk-overlay-background uk-overlay-icon"></div>
                                                                                 </figure>
                                                                                 </a>
@@ -552,7 +547,6 @@
                                         <div class="room_title border-bottom-whitesmoke clearfix">
                                                 <div class="left_room_title floatleft">
                                                     <h6 data-i18n="rooms_names.camp_standard"></h6>
-                                                    <p>40€/ <span data-i18n="rooms.night"></span></p>
                                                 </div>
                                                 <div class="left_room_title floatright">
                                                     <a href="#" class="btn" data-i18n="rooms.book"></a>
@@ -560,11 +554,8 @@
                                             </div>
                                         <div class="uk-overlay-panel uk-overlay-background single_wrapper_details clearfix animated bounceInDown">
                                             <div class="border-dark-1 padding-22 clearfix single_wrapper_details_pad">
-                                                <p>Hairdryer, airconditioner, heatingsystem, shower, privatebathroom, safedepositbox, tv, satellitechannels, wi-fi</p>
+                                                <p data-i18n="rooms_services.camp_standard"></p>
                                                 <div class="single_room_cost clearfix">
-                                                    <div class="floatleft">
-                                                        <p>40€/ <span data-i18n="rooms.night"></span></p>
-                                                    </div>
                                                     <div class="floatright">
                                                         <a href="campito_roomstandard.html" class="btn" data-i18n="rooms.book"></a>
                                                     </div>
@@ -583,7 +574,6 @@
                                         <div class="room_title border-bottom-whitesmoke clearfix">
                                                 <div class="left_room_title floatleft">
                                                     <h6 data-i18n="rooms_names.camp_comfort"></h6>
-                                                    <p>45€/ <span data-i18n="rooms.night"></span></p>
                                                 </div>
                                                 <div class="left_room_title floatright">
                                                     <a href="#" class="btn" data-i18n="rooms.book"></a>
@@ -591,11 +581,8 @@
                                             </div>
                                         <div class="uk-overlay-panel uk-overlay-background single_wrapper_details clearfix animated bounceInDown">
                                             <div class="border-dark-1 padding-22 clearfix single_wrapper_details_pad">
-                                                <p>Hairdryer, airconditioner, heatingsystem, shower, privatebathroom, safedepositbox, tv, satellitechannels, wi-fi</p>
+                                                <p data-i18n="rooms_services.camp_comfort"></p>
                                                 <div class="single_room_cost clearfix">
-                                                    <div class="floatleft">
-                                                        <p>45€/ <span data-i18n="rooms.night"></span></p>
-                                                    </div>
                                                     <div class="floatright">
                                                         <a href="#" class="btn" data-i18n="rooms.book"></a>
                                                     </div>
@@ -615,7 +602,6 @@
                                         <div class="room_title border-bottom-whitesmoke clearfix">
                                                 <div class="left_room_title floatleft">
                                                     <h6 data-i18n="rooms_names.camp_quadruple"></h6>
-                                                    <p>78€/ <span data-i18n="rooms.night"></span></p>
                                                 </div>
                                                 <div class="left_room_title floatright">
                                                     <a href="#" class="btn" data-i18n="rooms.book"></a>
@@ -623,11 +609,8 @@
                                             </div>
                                         <div class="uk-overlay-panel uk-overlay-background single_wrapper_details clearfix animated bounceInDown">
                                             <div class="border-dark-1 padding-22 clearfix single_wrapper_details_pad">
-                                                <p>Hairdryer, airconditioner, heatingsystem, shower, privatebathroom, safedepositbox, tv, satellitechannels, wi-fi</p>
+                                                <p data-i18n="rooms_services.camp_quadruple"></p>
                                                 <div class="single_room_cost clearfix">
-                                                    <div class="floatleft">
-                                                        <p>78€/ <span data-i18n="rooms.night"></span></p>
-                                                    </div>
                                                     <div class="floatright">
                                                         <a href="#" class="btn" data-i18n="rooms.book"></a>
                                                     </div>
@@ -648,7 +631,6 @@
                                         <div class="room_title border-bottom-whitesmoke clearfix">
                                                 <div class="left_room_title floatleft">
                                                     <h6 data-i18n="rooms_names.camp_single"></h6>
-                                                    <p>28€/ <span data-i18n="rooms.night"></span></p>
                                                 </div>
                                                 <div class="left_room_title floatright">
                                                     <a href="#" class="btn" data-i18n="rooms.book"></a>
@@ -656,11 +638,8 @@
                                             </div>
                                         <div class="uk-overlay-panel uk-overlay-background single_wrapper_details clearfix animated bounceInDown">
                                             <div class="border-dark-1 padding-22 clearfix single_wrapper_details_pad">
-                                                <p>Hairdryer, airconditioner, heatingsystem, shower, privatebathroom, safedepositbox, tv, satellitechannels, wi-fi</p>
+                                                <p data-i18n="rooms_services.camp_single"></p>
                                                 <div class="single_room_cost clearfix">
-                                                    <div class="floatleft">
-                                                        <p>28€/ <span data-i18n="rooms.night"></span></p>
-                                                    </div>
                                                     <div class="floatright">
                                                         <a href="#" class="btn" data-i18n="rooms.book"></a>
                                                     </div>
@@ -679,7 +658,6 @@
                                         <div class="room_title border-bottom-whitesmoke clearfix">
                                                 <div class="left_room_title floatleft">
                                                     <h6 data-i18n="rooms_names.camp_superior"></h6>
-                                                    <p>50€/ <span data-i18n="rooms.night"></span></p>
                                                 </div>
                                                 <div class="left_room_title floatright">
                                                     <a href="#" class="btn" data-i18n="rooms.book"></a>
@@ -687,11 +665,8 @@
                                             </div>
                                         <div class="uk-overlay-panel uk-overlay-background single_wrapper_details clearfix animated bounceInUp">
                                             <div class="border-dark-1 padding-22 clearfix single_wrapper_details_pad">
-                                                <p>Hairdryer, airconditioner, heatingsystem, shower, privatebathroom, safedepositbox, tv, satellitechannels, wi-fi</p>
+                                                <p data-i18n="rooms_services.camp_superior"></p>
                                                 <div class="single_room_cost clearfix">
-                                                    <div class="floatleft">
-                                                        <p>50€/ <span data-i18n="rooms.night"></span></p>
-                                                    </div>
                                                     <div class="floatright">
                                                         <a href="#" class="btn" data-i18n="rooms.book"></a>
                                                     </div>
@@ -710,7 +685,6 @@
                                         <div class="room_title border-bottom-whitesmoke clearfix">
                                                 <div class="left_room_title floatleft">
                                                     <h6 data-i18n="rooms_names.camp_triple"></h6>
-                                                    <p>60€/ <span data-i18n="rooms.night"></span></p>
                                                 </div>
                                                 <div class="left_room_title floatright">
                                                     <a href="#" class="btn" data-i18n="rooms.book"></a>
@@ -718,11 +692,8 @@
                                             </div>
                                         <div class="uk-overlay-panel uk-overlay-background single_wrapper_details clearfix animated bounceInDown">
                                             <div class="border-dark-1 padding-22 clearfix single_wrapper_details_pad">
-                                                <p>Hairdryer, airconditioner, heatingsystem, shower, privatebathroom, safedepositbox, tv, satellitechannels, wi-fi</p>
+                                                <p data-i18n="rooms_services.camp_triple"></p>
                                                 <div class="single_room_cost clearfix">
-                                                    <div class="floatleft">
-                                                        <p>60€/ <span data-i18n="rooms.night"></span></p>
-                                                    </div>
                                                     <div class="floatright">
                                                         <a href="#" class="btn" data-i18n="rooms.book"></a>
                                                     </div>
