Change book link for double room hostal

--- a/hostal-campito.html
+++ b/hostal-campito.html
@@ -557,7 +557,7 @@
                                                 <p data-i18n="rooms_services.camp_standard"></p>
                                                 <div class="single_room_cost clearfix">
                                                     <div class="floatright">
-                                                        <a href="campito_roomstandard.html" class="btn" data-i18n="rooms.book"></a>
+                                                        <a href="#" class="btn" data-i18n="rooms.book"></a>
                                                     </div>
                                                 </div>
                                             </div>
