META descriptions and keywords

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Hostal Campito - Mejor Precio Web Oficial ®</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="" />
-        <meta name="keywords" content="" />
+        <meta name="description" content="Bienvenidos a Conil sin Fronteras, Hostal-Restaurante Campito es una empresa joven y de tradición familiar, somos la cuarta generación de una familia dedicada a la hostelería y a la oferta turística,  trabajo que se remonta a más de 5 décadas de historia. Hoy en día somos una empresa con nombre consolidado, valor que lleva tras de si confianza, calidad y trabajo bien hecho. Ofertamos un hostal en pleno casco antiguo de nuestro pueblo, alojamientos rurales a un paso de la playa  y un restaurante de platos a la brasa." />
+        <meta name="keywords" content="conil, hostal, restaurante, campito, playa, hotel, vacaciones, verano, cádiz, Conil de la Frontera, mar, surf, sol, kitesurf" />
 
         <link rel="icon" href="img/favicon.ico" sizes="16x16">
         
