--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
                                         <div class="row">
                                             <div class="co-lg-5 col-md-5">
                                                 <div class="single-tab-image">
-                                                    <a href="#"><img src="img/hostal/solar02.jpg" alt="parking"></a>
+                                                    <a href="#"><img src="img/hostal/terraza 7.jpg" alt="parking"></a>
                                                 </div>
                                             </div>
                                             <div class="co-lg-7 col-md-7">
