Subida imagenes Slider

--- a/hostal-campito.html
+++ b/hostal-campito.html
@@ -178,12 +178,12 @@
                                                                       <div class="carousel-inner" role="listbox">
                                                                         <div class="item active">
                                                                           <div class="single_item" style="">
-                                                                            <img src="img/hostal/hostal00.jpg" alt="img">
+                                                                            <img src="img/hostalslider/_MG_9791.jpg" alt="img">
                                                                           </div>
                                                                         </div>
                                                                         <div class="item">
                                                                           <div class="single_item" style="">
-                                                                            <img src="img/hostal/rep01.jpg" alt="img">
+                                                                            <img src="img/hostalslider/_MG_9787.jpg" alt="img">
                                                                           </div>
                                                                         </div>
                                                                         <div class="item">
@@ -198,7 +198,7 @@
                                                                         </div>
                                                                         <div class="item">
                                                                           <div class="single_item" style="">
-                                                                            <img src="img/hostal/rep03.jpg" alt="img">
+                                                                            <img src="img/hostalslider/DSC_4997.JPG" alt="img">
                                                                           </div>
                                                                         </div>
                                                                       </div>
@@ -351,17 +351,17 @@
                                                                       <div class="carousel-inner" role="listbox">
                                                                         <div class="item active">
                                                                           <div class="single_item" style="">
-                                                                            <img src="img/hostal/solar00.jpg" alt="img">
+                                                                            <img src="img/solariumslider/terraza 2.jpg" alt="img">
                                                                           </div>
                                                                         </div>
                                                                         <div class="item">
                                                                           <div class="single_item" style="">
-                                                                            <img src="img/hostal/solar01.jpg" alt="img">
+                                                                            <img src="img/solariumslider/terraza 5.jpg" alt="img">
                                                                           </div>
                                                                         </div>
                                                                         <div class="item">
                                                                           <div class="single_item" style="">
-                                                                            <img src="img/hostal/solar04.jpg" alt="img">
+                                                                            <img src="img/solariumslider/terraza 7.jpg" alt="img">
                                                                           </div>
                                                                         </div>
                                                                       </div>
@@ -384,9 +384,9 @@
                                                                     <div class="single_room_wrapper clearfix">
                                                                         <div class="room_wrapper">
                                                                             <div class="dif_room_media">
-                                                                                <a href="img/hostal/solar02.jpg" data-uk-lightbox="{group:'group1'}" title="Solarium">
+                                                                                <a href="img/solariumslider/terraza 7.jpg" data-uk-lightbox="{group:'group1'}" title="Solarium">
                                                                                 <figure class="uk-overlay uk-overlay-hover">
-                                                                                    <img alt="img" src="img/hostal/solar02.jpg" >
+                                                                                    <img alt="img" src="img/solariumslider/terraza 7.jpg" >
                                                                                     <div class="uk-overlay-panel uk-overlay-background uk-overlay-icon"></div>
                                                                                 </figure>
                                                                                 </a>
@@ -398,9 +398,9 @@
                                                                         <div class="single_room_wrapper clearfix">
                                                                             <div class="room_wrapper">
                                                                                 <div class="dif_room_media">
-                                                                                    <a href="img/hostal/solar03.jpg" data-uk-lightbox="{group:'group1'}" title="Solarium">
+                                                                                    <a href="img/solariumslider/DSC_5238.jpg" data-uk-lightbox="{group:'group1'}" title="Solarium">
                                                                                     <figure class="uk-overlay uk-overlay-hover">
-                                                                                        <img alt="img" src="img/hostal/solar03.jpg" >
+                                                                                        <img alt="img" src="img/solariumslider/DSC_5238.jpg" >
                                                                                         <div class="uk-overlay-panel uk-overlay-background uk-overlay-icon"></div>
                                                                                     </figure>
                                                                                     </a>
