--- a/restaurante-campito.html
+++ b/restaurante-campito.html
@@ -105,7 +105,7 @@
                                     <li><a href="#" id="changelang" data-lang="en"><i class="fa fa-flag" aria-hidden="true"></i> English</a></li>
                                   </ul>
                                   <div class="emergency_number">
-                                      <a href="tel:956440708"><img src="img/call-icon.png" alt="phone">956 440 708</a>
+                                      <a href="tel:956440708"><img src="img/call-icon.png" alt="phone">623 22 82 83</a>
                                   </div>
                                 </div><!-- /.navbar-collapse -->
                             </nav>
