--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                     <li><a href="#" id="changelang" data-lang="en"><i class="fa fa-flag" aria-hidden="true"></i> English</a></li>
                                   </ul>
                                   <div class="emergency_number">
-                                      <a href="tel:956440708"><img src="img/call-icon.png" alt="phone">623 22 82 83</a>
+                                      <a href="tel:623228283"> <i class="fa fa-whatsapp"></i> 623 22 82 83</a>
                                   </div>
                                 </div><!-- /.navbar-collapse -->
                             </nav>
@@ -693,7 +693,7 @@
                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                         <div class="call clearfix">
                             <h6 data-i18n="contact.phone"></h6>
-                            <p>956 440 708</p>
+                            <p>623 22 82 83</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
