--- a/restaurante-campito.html
+++ b/restaurante-campito.html
@@ -105,7 +105,7 @@
                                     <li><a href="#" id="changelang" data-lang="en"><i class="fa fa-flag" aria-hidden="true"></i> English</a></li>
                                   </ul>
                                   <div class="emergency_number">
-                                      <a href="tel:956440708"><img src="img/call-icon.png" alt="phone">623 22 82 83</a>
+                                      <a href="tel:623228283"><i class="fa fa-whatsapp"></i> 623 22 82 83</a>
                                   </div>
                                 </div><!-- /.navbar-collapse -->
                             </nav>
@@ -199,7 +199,7 @@
                                     </li>
                                     <li>
                                         <i class="fa fa-phone"></i>
-                                        956440708
+                                        623228283
                                     </li>
                                     <li>
                                         <i class="fa fa-envelope-o"></i>
@@ -238,7 +238,7 @@
                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                         <div class="call clearfix">
                             <h6 data-i18n="contact.phone"></h6>
-                            <p>956 440 708</p>
+                            <p>623 22 82 83</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
