--- a/vivienda-rural-atlantico-sur.html
+++ b/vivienda-rural-atlantico-sur.html
@@ -405,7 +405,7 @@
                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                         <div class="call clearfix">
                             <h6>Phone</h6>
-                            <p>623 22 82 83</p>
+                            <p><i class="fa fa-whatsapp"></i> 623 22 82 83</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
@@ -424,6 +424,7 @@
                         <div class="social_icons clearfix">
                             <ul>
                                 <li><a href="https://www.facebook.com/AtlanticosurConildelafrontera"><i class="fa fa-facebook"></i></a></li>
+                                 <li><a href="https://instagram.com/hostalrestaurantecampito"><i class="fa fa-instagram"></i></a></li>
                             </ul>
                         </div>
                     </div>
